--- a/bsconfig.json
+++ b/bsconfig.json
@@ -4,9 +4,10 @@
     "dir": "src",
     "subdirs": true
   },
-  "package-specs": [
-    "es6"
-  ],
+  "package-specs": {
+    "module": "es6",
+    "in-source": true
+  },
   "suffix": ".bs.js",
   "bs-dependencies": [
     "@rescript/react"
